fix(outline): make outline color less contrasty

--- a/src/components/Outline/Outline.css
+++ b/src/components/Outline/Outline.css
@@ -1,5 +1,6 @@
 .outline {
   overflow-y: auto;
+  outline-color: var(--border);
 }
 
 .outline ul {
